configs/ondewo-ingress/ondewo-ingress-envoy/envoy.yaml
##################################################################################
# ONDEWO Webhook Server Python
##################################################################################

##################################################################################
# ENVOY ADMIN
##################################################################################
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 } # ondewo-ingress-envoy-admin

layered_runtime: # Note: workaround for envoy v1.29.2 => https://github.com/triton-inference-server/server/issues/6936
  layers:
    - name: static_layer_sanitize_te
      static_layer:
        envoy.reloadable_features.sanitize_te: false

static_resources:

  ##################################################################################
  # Listeners
  ##################################################################################
  listeners:

    # -------------------------------------------------------------------------------
    # Listener: ondewo-nlu-webhook-server-python
    # -------------------------------------------------------------------------------
    - name: listener_ondewo_nlu_webhook_server_python
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 } # listener_ondewo_nlu_webhook_server_python
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: services
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: cluster_ondewo_nlu_webhook_server_python
                            timeout: 0s
                            retry_policy:
                              retry_on: 5xx, reset, connect-failure
                              num_retries: 5
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    # -------------------------------------------------------------------------------
    # Listener: ondewo-nlu-webhook-server-python-ssl
    # -------------------------------------------------------------------------------
    - name: ondewo-nlu-webhook-server-python-ssl
      # https://www.envoyproxy.io/docs/envoy/latest/start/quick-start/securing
      address:
        socket_address: { address: 0.0.0.0, port_value: 443 } # listener_ondewo_aim_ssl
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: services
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: cluster_ondewo-nlu-webhook-server-python-ssl
                            timeout: 0s
                            retry_policy:
                              retry_on: 5xx, reset, connect-failure
                              num_retries: 5
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: "/etc/certs/server-cert.pem"
                    private_key:
                      filename: "/etc/certs/server-key.pem"
                validation_context:
                  trusted_ca:
                    filename: "/etc/certs/ca-cert.pem"


  ##################################################################################
  # Clusters
  ##################################################################################
  clusters:

    # -------------------------------------------------------------------------------
    # Cluster: ondewo-nlu-webhook-server-python
    # -------------------------------------------------------------------------------
    - name: cluster_ondewo_nlu_webhook_server_python
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster_ondewo_nlu_webhook_server_python
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      { address: 0.0.0.0, port_value: 443 } # cluster_ondewo_nlu_webhook_server_python
      # Required to forward incoming TLS context
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext

    # -------------------------------------------------------------------------------
    # Cluster: ondewo-nlu-webhook-server-python-ssl
    # -------------------------------------------------------------------------------
    - name: cluster_ondewo_nlu_webhook_server_python_ssl
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster_ondewo_nlu_webhook_server_python_ssl
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      { address: ondewo-nlu-webhook-server-python, port_value: 59001 } # cluster_ondewo_nlu_webhook_server_python_ssl
